# spreadsheet_automation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  template.yml  vercel.json
.devcontainer/: devcontainer.json  setup.sh
api/: addreviews.py  index.py
core/: appendreviews.py  businessreviews.py  constants.py  dataclasses.py  datastructs.py  lambdaentry.py  main.py  tokenmanager.py
src/core/: appendreviews.py  businessreviews.py  datastructs.py  lambdaentry.py  main.py  tokenmanager.py
src/core/lambda/: addreviews.py
src/core/models/: datastructs.py  error.py
src/core/service/: appendreviewsservice.py  authservice.py  fetchreviews.py  getaccountlocations.py  getlocations.py  networkservice.py  sscredsservice.py
src/core/utils/: getenvvar.py
src/core/views/: addreviews.py
test/core/: test_appendreviews.py  test_businessreviews.py  test_lambdaentry.py  test_main.py  test_tokenmanager.py
test/integration/: test_fullapp.py
