[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-cwp-verify"
description = "A tool to verify that workflow implements a cognitive work problem"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "returns",
  "requests",
  "boto3",
  "google-oauth2-tool",
  "google-api-python-client",
  "dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "moto[ec2,s3,all]"
  ]
