[project]
name = "google aggregator"
description = "A tool for gathering company reviews"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "returns",
  "requests",
  "boto3",
  "google-oauth2-tool",
  "google-api-python-client",
  "dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "moto[ec2,s3,all]"
  ]
